--- a/package.json
+++ b/package.json
@@ -2,15 +2,22 @@
   "name": "react-otp-inpt",
   "description": "Two test React components",
   "author": "Shiraaz",
-  "keywords": ["react", "components", "ui"],
-  "version": "0.1.0",
+  "keywords": [
+    "react",
+    "components",
+    "ui"
+  ],
+  "version": "0.1.1",
   "private": false,
   "main": "dist/index.js",
   "module": "dist/index.js",
-  "files": [ "dist", "README.md" ],
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "repository": {
-      "type": "git",
-      "url": "git+https://github.com/shiraazAh/react-otp-inpt.git"
+    "type": "git",
+    "url": "git+https://github.com/shiraazAh/react-otp-inpt.git"
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
@@ -19,6 +26,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-otp-inpt": "^0.1.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
